feat: prevent data leakage by filtering training merges from dataset collection
- Python script now filters out youngest 10% of merges before learning
  pattern distributions; writes only the trained-on IDs to
  trained_on_merge_ids.csv (renamed from merge_ids.csv)
- MergeFilter loads trained_on_merge_ids.csv from classpath and exposes
  isTrainingMerge(); DatasetCollectionOrchestrator skips those merges
  as a primary check during dataset collection
- Also includes all prior session changes: exact pattern names (OURS:BASE
  etc.), flattened JSON structure, variantIndex/ownExecutionSeconds/
  timedOut/budgetExhausted fields, CompilationResult/TestTotal JSON
  improvements, fixed PatternHeuristics NPE and resource path, cache-
  warmer counted as variant #1, deadline enforcement fixes

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>